--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           fontFamily: {
                 manrope: ['Manrope'],
               }
+              backgroundImage : {
+                'bannerbg' : "url('./assets/bg.jpg')"
+              }
         }
       }
     }
@@ -76,6 +79,7 @@
                   <i class="fa-solid fa-magnifying-glass bg-white rounded-full w-10 h-10 inline-flex  justify-center items-center hidden md:flex"></i>
                   <i class="fa-solid fa-cart-shopping bg-white rounded-full w-10 h-10 inline-flex justify-center items-center hidden md:flex"></i>
                   <a class="btn btn-ghost bg-[#abef5f] rounded-full">Book Consult <i class="fa-solid fa-arrow-right  text-[#abef5f] rounded-full w-7 h-7 inline-flex -rotate-45 justify-center items-center"></i></a>
+              
                 </div> 
               </div>
         </nav>
@@ -240,11 +244,44 @@
         </div>
 
         </div>
-
-
        </section>
-
-
+       <!-- let's discuss the project  -->
+       <section class=" min-h-auto mx-auto text-center w-11/12 border-gray-100  m-8  py-8 bg-bannerbg "  >
+         <div>
+          <button class="btn btn-ghost bg-[#abef5f] rounded-full">Let's Connect</button>
+        </div>  
+        <h1 class="text-2xl font-black mb-3 text-center lg:text-center"> Let's discuss the project</h1>
+         <p class="text-center">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+         <div>
+           <div class="flex flex-row items-center justify-center gap-10 py-6">
+             <input type="text" placeholder="First name*" class="input input-borderd w-full max-w-xs" />
+             <input type=" text " placeholder="Last name *" class="input input-borderd w-full max-w-xs" />
+           </div>
+           <div class="flex flex-row items-center justify-center gap-10 "> 
+             <input type="text" placeholder="Phone number*" class="input input-borderd w-full max-w-xs" />
+             <input type=" text " placeholder="Email *" class="input input-borderd  w-full max-w-xs" />
+           </div>
+           <div > <input type="text" placeholder="Write your message here " class=" input input-borderd  justify-start  w-full  max-w-xs" /></div>
+              <button class="btn btn-wide bg-[#abef5f] rounded-full  w-3/4">Send mails</button>
+            </div>
+        </div>
+       </section>
     </main>
+    <footer class="bg-[#1C1C1C] w-full justify-center ">
+      <div  >
+        <h1 class="text-2xl text-white font-bold text-center py-6"> Rinterio</h1>
+        <p class=" text-center text-[#737373] py-4">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+      </div> 
+      <div class="flex flex-row items-center justify-center gap-10 py-6">
+        <button class=" text-center text-[#E9E9E9] "> Home</button>
+        <button class=" text-center text-[#E9E9E9] "> Service</button>
+        <button class=" text-center text-[#E9E9E9] "> Portfolio</button>
+        <button class=" text-center text-[#E9E9E9] "> Blog</button>
+      </div>
+       <div class="flex flex-row items-center justify-center gap-10 py-6">
+        <button class="btn btn-ghost bg-[#abef5f] justify-center items-center rounded-full"> Book Consult</button>
+       </div>
+       
+    </footer>
 </body>
 </html>
