--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.tailwindcss.com"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/fontawesome.min.css" integrity="sha512-B46MVOJpI6RBsdcU307elYeStF2JKT87SsHZfRSkjVi4/iZ3912zXi45X5/CBr/GbCyLx6M1GQtTKYRd52Jxgw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
  <!-- font family manrope -->
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -102,12 +104,14 @@
     </header>
 
     <main  class="mx-auto">
-      <section class="min-h-auto mx-auto text-center w-11/12 border-gray-100 ">
+      <section class="min-h-auto mx-auto text-center w-11/12 border-gray-100 sm:flex flex-col gap-6">
          <div class="  flex  justify-start w-11/12 mx-auto my-28 "> 
             <img src="./assets/Vector.png" alt="" class="relative -left-12 -top-6 hidden lg:block"> </div>
             <div class="flex basis-6/12  flex gap-10 justify-center">
               <div>
-              <div class="mb-3 lg:w-3/4 flex items-center justify-center lg:justify-start btn btn-ghost"><a href=" " class="text-base font-black px-4 py-2 bg-white rounded-full "><i class="fa-solid fa-arrow-right"></i>About Us</a></div>
+               <div>
+                <a class="btn btn-ghost bg-white rounded-full justify-start  text-xl">About us </a>
+               </div>
           
          
               <div class="lg:w-3/4 flex gap-4 flex-col sm:flex-row lg:flex-col">
@@ -154,7 +158,7 @@
 
           <div class="inline-flex flex gap-4 px-4 py-4">
             <!-- card 1 -->
-            <div class="card bg-'rgb(231, 193, 211)' w-64 shadow-xl">
+            <div class="card bg-[#E7C1D3] w-64 shadow-xl">
               <figure>
                 <img class="justify-start"  src="assets/concept.png"
                   alt=" " />
@@ -167,7 +171,7 @@
                 </div>
             </div>
             <!-- card 2 -->
-            <div class="card bg-'rgb(231, 193, 211)' w-64 shadow-xl">
+            <div class="card bg-[#EFDA6E] w-64 shadow-xl">
               <figure>
                 <img class="justify-start"  src="assets/flow-chart.png"
                   alt=" " />
@@ -181,7 +185,7 @@
             </div>
 
             <!-- card  3-->
-            <div class="card bg-'rgb(231, 193, 211)' w-64 shadow-xl">
+            <div class="card bg-[#A4DAC3] w-64 shadow-xl">
               <figure>
                 <img class="justify-start"  src="assets/vision.png"
                   alt=" " />
@@ -194,7 +198,7 @@
                 </div>
             </div>
             <!-- card 4 -->
-            <div class="card bg-'rgb(231, 193, 211)' w-64 shadow-xl">
+            <div class="card bg-[#77AAEA] w-64 shadow-xl">
               <figure>
                 <img class="justify-start"  src="assets/budget-planning.png"
                   alt=" " />
@@ -272,11 +276,12 @@
         <h1 class="text-2xl text-white font-bold text-center py-6"> Rinterio</h1>
         <p class=" text-center text-[#737373] py-4">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
       </div> 
-      <div class="flex flex-row items-center justify-center gap-10 py-6">
+      <div class="flex flex-row items-center justify-center gap-32 py-6">
         <button class=" text-center text-[#E9E9E9] "> Home</button>
         <button class=" text-center text-[#E9E9E9] "> Service</button>
         <button class=" text-center text-[#E9E9E9] "> Portfolio</button>
         <button class=" text-center text-[#E9E9E9] "> Blog</button>
+        <button class=" text-center text-[#E9E9E9] "> Contact us</button>
       </div>
        <div class="flex flex-row items-center justify-center gap-10 py-6">
         <button class="btn btn-ghost bg-[#abef5f] justify-center items-center rounded-full"> Book Consult</button>
